syntax = "proto3";

option csharp_namespace = "Saes.Protos.ModelServices";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "models.proto";
import "statuses.proto";

package log;

// NOT_IMPLEMENTED

service LogService {
    rpc Search (LogLookup) returns (LogLookupResponse);
}

message LogLookup
{
    google.protobuf.Int32Value LogID = 1;
	google.protobuf.Int32Value TableDataID = 2;
	google.protobuf.Int32Value TableRowID = 3;
	google.protobuf.StringValue Action = 4;
	google.protobuf.Int32Value UserSessionID = 5;
	google.protobuf.Timestamp DateStart = 6;
	google.protobuf.Timestamp DateEnd = 7;
	google.protobuf.StringValue GUID = 8;
	google.protobuf.StringValue UserLogin = 9;
}


// Comment
message LogLookupResponse
{
    repeated models.LogDto data = 1;
}